--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -139,6 +139,8 @@
     <Compile Include="Data\ActorRepository.cs" />
     <Compile Include="Data\Actor.cs" />
     <Compile Include="Data\GraphDatabaseConfiguration.cs" />
+    <Compile Include="Data\GremlinClient.cs" />
+    <Compile Include="Data\VertexExtensions.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteError.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteClient.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteException.cs" />
