Add a single failing unit test for actor graph service

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -136,11 +136,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\ActorGraphService.cs" />
     <Compile Include="Data\ActorRepository.cs" />
-    <Compile Include="Data\Actor.cs" />
+    <Compile Include="Domain\Actor.cs" />
     <Compile Include="Data\GraphDatabaseConfiguration.cs" />
     <Compile Include="Data\GremlinClient.cs" />
     <Compile Include="Data\VertexExtensions.cs" />
+    <Compile Include="NetflixRoulette\INetflixRouletteClient.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteError.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteClient.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteException.cs" />
