Add populate graph for actor command handler

--- a/Application.Unit.Tests/Application.Unit.Tests.csproj
+++ b/Application.Unit.Tests/Application.Unit.Tests.csproj
@@ -48,9 +48,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Domain\ActorGraphServiceTests.cs" />
+    <Compile Include="Feature\PopulateFeatureForActorCommandTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
