Wired services up to asp.net core DI container;
accidentally DoS'd netflix roulette with this commit. Need to limit the
max requests to them to something reasonable

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -140,6 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\IActorRepository.cs" />
+    <Compile Include="Data\IGremlinClient.cs" />
     <Compile Include="Domain\ActorGraphService.cs" />
     <Compile Include="Data\ActorRepository.cs" />
     <Compile Include="Domain\Actor.cs" />
