--- a/Application.Integration.Tests/Application.Integration.Tests.csproj
+++ b/Application.Integration.Tests/Application.Integration.Tests.csproj
@@ -141,6 +141,8 @@
     <Compile Include="Data\ActorRepositoryTests.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestSupport\Constants.cs" />
+    <Compile Include="TestSupport\GremlinClientFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
