Can populate type that yields a path between actors

--- a/Application.Integration.Tests/Application.Integration.Tests.csproj
+++ b/Application.Integration.Tests/Application.Integration.Tests.csproj
@@ -138,6 +138,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ActorPathRepositoryTests.cs" />
     <Compile Include="Data\ActorRepositoryTests.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteClientTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
