Add an actor path view model so the domain type isn't leaked to the website

--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -7,6 +7,7 @@
     <RootNamespace>Octogami.SixDegreesOfNetflix.Website</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="MediatR" Version="3.0.1" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
