Feature/get path between actors (#8)
* Get the path between actors; saving work to refactor

* Can populate type that yields a path between actors

* Can look up an actor id by name

* Return null when no path exists between actors

* Add get path between actors command; first time end-to-end works...

even if it looks bad and barely functions

* Add an actor path view model so the domain type isn't leaked to the website

* Use a tag helper to write the HTML for the paths between actors

* Clean up HTML, make pages look a bit nicer, remove unnecessary controller and views

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -139,16 +139,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\ActorPathRepository.cs" />
+    <Compile Include="Data\IActorPathRepository.cs" />
     <Compile Include="Data\IActorRepository.cs" />
     <Compile Include="Data\IGremlinClient.cs" />
-    <Compile Include="Domain\ActorGraphService.cs" />
+    <Compile Include="Domain\ActorService.cs" />
     <Compile Include="Data\ActorRepository.cs" />
     <Compile Include="Domain\Actor.cs" />
     <Compile Include="Data\GraphDatabaseConfiguration.cs" />
     <Compile Include="Data\GremlinClient.cs" />
     <Compile Include="Data\VertexExtensions.cs" />
-    <Compile Include="Domain\IActorGraphService.cs" />
-    <Compile Include="Feature\PopulateGraphForActorCommand.cs" />
+    <Compile Include="Domain\ActorPath.cs" />
+    <Compile Include="Domain\IActorService.cs" />
+    <Compile Include="Domain\MoviePath.cs" />
+    <Compile Include="Feature\GetPathBetweenActors.cs" />
+    <Compile Include="Feature\PopulateGraphForActor.cs" />
     <Compile Include="NetflixRoulette\INetflixRouletteClient.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteError.cs" />
     <Compile Include="NetflixRoulette\NetflixRouletteClient.cs" />
