--- a/Application/packages.config
+++ b/Application/packages.config
@@ -13,29 +13,31 @@
   <package id="System.Collections.Immutable" version="1.2.0" targetFramework="net47" />
   <package id="System.Console" version="4.0.0" targetFramework="net47" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net47" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.3.0" targetFramework="net47" />
   <package id="System.Diagnostics.FileVersionInfo" version="4.0.0" targetFramework="net47" />
   <package id="System.Diagnostics.StackTrace" version="4.0.1" targetFramework="net47" />
   <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net47" />
   <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="net47" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net47" />
-  <package id="System.IO" version="4.1.0" targetFramework="net47" />
+  <package id="System.IO" version="4.3.0" targetFramework="net47" />
   <package id="System.IO.FileSystem" version="4.0.1" targetFramework="net47" />
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net47" />
   <package id="System.Linq" version="4.1.0" targetFramework="net47" />
   <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net47" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net47" />
   <package id="System.Reflection.Metadata" version="1.3.0" targetFramework="net47" />
   <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net47" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net47" />
-  <package id="System.Runtime" version="4.1.0" targetFramework="net47" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net47" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net47" />
   <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net47" />
   <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net47" />
   <package id="System.Runtime.Numerics" version="4.0.1" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.2.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Encoding" version="4.0.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.Primitives" version="4.0.0" targetFramework="net47" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.1.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net47" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net47" />
   <package id="System.Text.Encoding" version="4.0.11" targetFramework="net47" />
   <package id="System.Text.Encoding.CodePages" version="4.0.1" targetFramework="net47" />
   <package id="System.Text.Encoding.Extensions" version="4.0.11" targetFramework="net47" />
@@ -48,4 +50,5 @@
   <package id="System.Xml.XmlDocument" version="4.0.1" targetFramework="net47" />
   <package id="System.Xml.XPath" version="4.0.1" targetFramework="net47" />
   <package id="System.Xml.XPath.XDocument" version="4.0.1" targetFramework="net47" />
+  <package id="TMDbLib" version="1.0.7-alpha" targetFramework="net47" />
 </packages>
