Remove Netflix Roulette client and related;
the Netflix Roulette API is gone :(

--- a/Application.Unit.Tests/Application.Unit.Tests.csproj
+++ b/Application.Unit.Tests/Application.Unit.Tests.csproj
@@ -47,7 +47,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\ActorGraphServiceTests.cs" />
     <Compile Include="Feature\PopulateFeatureForActorCommandTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,6 +59,9 @@
       <Project>{b9e8a0e9-fc3d-4390-ae67-b6e9956e639c}</Project>
       <Name>Application</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Domain\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
