--- a/Dataloader/Dataloader.csproj
+++ b/Dataloader/Dataloader.csproj
@@ -9,6 +9,13 @@
     <PackageReference Include="CsvHelper" Version="15.0.3" />
     <PackageReference Include="gremlin.net" Version="3.4.6" />
     <PackageReference Include="Microsoft.Azure.CosmosDB.BulkExecutor" Version="2.4.1-preview" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="appSettings.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
